[gd_scene load_steps=13 format=3 uid="uid://bghr8dfxro6pk"]

[ext_resource type="Theme" uid="uid://dek1pe5nypotq" path="res://Themes/Buttons.tres" id="1_sc6jh"]
[ext_resource type="Script" path="res://Scripts/UI/menu.gd" id="2_d1cuo"]
[ext_resource type="Texture2D" uid="uid://8oil82k6al2w" path="res://Assets/BG_Menu.png" id="3_lhwn6"]
[ext_resource type="Texture2D" uid="uid://d2sym3wm53teq" path="res://Assets/Menu_buttons/bouton_play_menu_on.png" id="3_q6cd4"]
[ext_resource type="Texture2D" uid="uid://mxsurijjg2n2" path="res://Assets/Menu_buttons/bouton_scorebord_menu_on.png" id="4_q7mk6"]
[ext_resource type="Texture2D" uid="uid://v5ua5t6ctsox" path="res://Assets/Menu_buttons/bouton_quit_menu_on.png" id="5_1pdst"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gn3th"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_amqxr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wougv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kr7lp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b0gl6"]

[sub_resource type="Theme" id="Theme_olh2y"]
Button/styles/disabled = SubResource("StyleBoxEmpty_gn3th")
Button/styles/focus = SubResource("StyleBoxEmpty_amqxr")
Button/styles/hover = SubResource("StyleBoxEmpty_wougv")
Button/styles/normal = SubResource("StyleBoxEmpty_kr7lp")
Button/styles/pressed = SubResource("StyleBoxEmpty_b0gl6")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sc6jh")
script = ExtResource("2_d1cuo")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lhwn6")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -186.0
offset_right = 360.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 34
alignment = 1

[node name="play_button" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_olh2y")
icon = ExtResource("3_q6cd4")

[node name="scoreboard_button" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_olh2y")
icon = ExtResource("4_q7mk6")

[node name="quit_button" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_olh2y")
icon = ExtResource("5_1pdst")

[connection signal="pressed" from="VBoxContainer2/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/scoreboard_button" to="." method="_on_scoreboard_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/quit_button" to="." method="_on_quit_button_pressed"]
